--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap');
+
+
+body, html {position: relative; height: 100%;}
+
 body {
 	margin: 0;
 	box-sizing: border-box;
 	background: url('https://images.pexels.com/photos/1007657/pexels-photo-1007657.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260') no-repeat center center;
 	font-family: 'Nunito', sans-serif;
 	background-size: cover;
+}
+.half-screen::after {
+    position: absolute;
+    background: #00000057;
+    content: '';
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 .comment-wrapper {
@@ -142,6 +154,8 @@ body {
 
 .half-screen {
 	display: flex;
+	position: relative;
+	height: 100%;
 }
 
 .half-screen>div {
